[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/HatchIcon.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/HatchIconBackground.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 11.3334

[node name="HatchButton" type="Sprite"]
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="HatchIcon" type="Sprite" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="ThrowPosition" type="Position2D" parent="."]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
